--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>⚡</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GRIDWATCH - Energy Monitoring</title>
+    <meta name="description" content="Real-time energy monitoring dashboard for tracking consumption, costs, and device usage" />
+    <meta name="theme-color" content="#47B79F" />
+    <title>GRIDWATCH - Energy Monitoring Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
